Improved statement select, from, where and added groupby, having and orderby